--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "slicemachine": "start-slicemachine"
   },
   "dependencies": {
+    "@prismicio/client": "^6.7.0",
+    "@prismicio/helpers": "^2.3.3",
+    "@prismicio/react": "^2.5.0",
+    "@prismicio/slice-simulator-react": "^0.2.2",
     "@stripe/stripe-js": "^1.35.0",
     "axios": "^0.27.2",
     "faunadb": "^4.6.0",
@@ -26,6 +31,7 @@
     "@types/react": "^18.0.17",
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
+    "slice-machine-ui": "^0.4.2",
     "typescript": "^4.7.4"
   }
 }
