--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "babel-jest": "^29.2.2",
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.2.2",
     "jest-dom": "^4.0.0",
     "jest-environment-jsdom": "^29.2.2",
