--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "jest-dom": "^4.0.0",
     "jest-environment-jsdom": "^29.2.2",
     "slice-machine-ui": "^0.4.2",
+    "ts-jest": "^29.0.3",
     "typescript": "^4.7.4"
   }
 }
